--- a/css/mystyle_dataset.css
+++ b/css/mystyle_dataset.css
@@ -19,6 +19,14 @@ body {
   border: solid 2px black;
 }
 
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 70vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
+
 header {
   text-align: left;
   background: white;
