--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,10 @@ h6, .h6 {
   font-size: 0.9rem;
 }
 
+.em-tight { 
+  letter-spacing: -0.01em; 
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
